src/main/metadata-excluded/objects/FAQ_Notice__c.object
<CustomObject>
    <description>FAQ: This object is used for notice component in Console.</description>
    <fields>
        <fullName>FAQ_Notice_Type__c</fullName>
        <label>FAQ Notice Type</label>
        <picklist>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAQ_Title__c</fullName>
        <label>FAQ Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_URL__c</fullName>
        <label>FAQ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Message_Detail__c</fullName>
        <label>Message Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>FAQ Notice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_7_Days_Notices</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days Notices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQ Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>